kubernetes-best-practices/examples/journal/.infra/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
      - host: "api.journal.example"
        http:
          paths:
            - path: /*
              backend:
                serviceName: api
                servicePort: 4000
      - host: "journal.example"
        http:
          paths:
            - path: /*
              backend:
                serviceName: frontend
                servicePort: 3000
